# Cyrus

./: .dir-locals.el  .gitignore  .projectile  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.nix  build.rs  cli.rs  comments.py  devel.Dockerfile  docker-compose.yml  flake.nix  manifest.json  result  rustfmt.toml
codegen_gccjit/: Cargo.toml
codegen_gccjit/src/: blocks.rs  context.rs  control_flow.rs  funcs.rs  lib.rs  stdlib.rs  structs.rs
codegen_gccjit/src/builtins/: funcs.rs  loader.rs
compiler/: Cargo.toml  build.rs
compiler/src/: builtin_builder.rs  context.rs  control_flow.rs  expressions.rs  funcs.rs  import.rs  lib.rs  location.rs  options.rs  output.rs  scope.rs  structs.rs  types.rs  varables.rs  variables.rs
compiler/src/builtin_funcs/: io.rs
compiler/src/builtins/: builtin_builder.rs  builtins.rs  funcs.rs  loader.rs  macros.rs  mod.rs  shared_library.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  trigger.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: abi.rs  context.rs  diag.rs  diagnostic.rs  diagnostics.rs  enums.rs  exprs.rs  funcs.rs  internals.rs  lib.rs  modules.rs  options.rs  resolver.rs  scope.rs  stmts.rs  strings.rs  structs.rs  tests.rs  types.rs  values.rs  variables.rs
crates/codegen/src/builder/: abi.rs  controlflow.rs  enums.rs  exprs.rs  forward_decls.rs  funcs.rs  generics.rs  intrinsics.rs  irreg.rs  mod.rs  module.rs  stmts.rs  strings.rs  types.rs  unions.rs  values.rs  variables.rs
crates/codegen/src/context/: build_manifest.rs  context.rs  mod.rs  object_file_info.rs
crates/codegen_llvm/: Cargo.toml
crates/codegen_llvm/src/: abi.rs  build.rs  context.rs  diag.rs  enums.rs  exprs.rs  funcs.rs  internals.rs  intrinsics.rs  lib.rs  linkage.rs  modules.rs  opts.rs  resolver.rs  runtime.rs  scope.rs  stmts.rs  strings.rs  structs.rs  tests.rs  types.rs  value.rs  values.rs  variables.rs
crates/cyrusc_abi_targets/: Cargo.toml
crates/cyrusc_abi_targets/src/: helpers.rs  layout.rs  layouts.rs  lib.rs  types.rs  x86_64_sysv.rs
crates/cyrusc_abi_targets/src/targets/: mod.rs  x86_64_sysv.rs
crates/cyrusc_analyzer/: Cargo.toml
crates/cyrusc_analyzer/src/: _analyze.rs  analyze.rs  builtins.rs  cli.rs  context.rs  diagnostics.rs  generics.rs  infer.rs  lib.rs  lower.rs  monomorph.rs  nameconv.rs  normalizer.rs  resolve.rs  substitute.rs  types.rs
crates/cyrusc_analyzer/src/analyze/: assign_stmt.rs  block_stmt.rs  control_flow.rs  enum_stmt.rs  func_stmt.rs  funcs.rs  goto_stmt.rs  if_stmt.rs  interface_stmt.rs  interfaces.rs  loop_stmt.rs  methods.rs  mod.rs  stmt.rs  stmts.rs  struct_stmt.rs  switch_stmt.rs  tuple_export_stmt.rs  typedef_stmt.rs  (+3 more)
crates/cyrusc_buildmanifest/: Cargo.toml
crates/cyrusc_buildmanifest/src/: lib.rs
crates/cyrusc_cir/: Cargo.toml
crates/cyrusc_cir/src/: cli.rs  concrete_type.rs  lib.rs  monomorph.rs  types.rs  walk.rs
crates/cyrusc_cir_dump/: Cargo.toml
crates/cyrusc_cir_dump/src/: lib.rs
crates/cyrusc_cir_traverse/: Cargo.toml
crates/cyrusc_cir_traverse/src/: cir_dump.rs  lib.rs
crates/cyrusc_cli/: Cargo.toml
crates/cyrusc_cli/src/: args.rs  commands.rs  convert.rs  dispatch.rs  enums.rs  main.rs  options.rs  scaffold.rs  temp_executable_builder.rs  version.rs
crates/cyrusc_codegen_llvm/: Cargo.toml
crates/cyrusc_codegen_llvm/src/: asan.rs  lib.rs  optimizer.rs
crates/cyrusc_compiler/: Cargo.toml
crates/cyrusc_compiler/src/: codegen_traits.rs  compiler_version_compatibility.rs  context.rs  driver.rs  lib.rs  linker.rs  modulename.rs  object_file_info.rs  options.rs  target_machine_info.rs  tm_info.rs  vercheck.rs
crates/cyrusc_internal/: Cargo.toml
crates/cyrusc_internal/src/: analyzer_state.rs  compiler_options.rs  flow_state.rs  generic_scope.rs  lib.rs  local_scope.rs  module_loader.rs  monomorph.rs  scopes.rs  source_parser.rs  symbols.rs  symtab.rs  vtable.rs
crates/cyrusc_lexer/: Cargo.toml
crates/cyrusc_lexer/src/: cli.rs  diagnostics.rs  format.rs  lib.rs  mod.rs  tests.rs
crates/cyrusc_modulefsloader/: Cargo.toml
crates/cyrusc_modulefsloader/src/: diagnostics.rs  lib.rs
crates/cyrusc_parser/: Cargo.toml
crates/cyrusc_parser/src/: cli.rs  common.rs  diagnostics.rs  exprs.rs  lib.rs  mod.rs  modifiers.rs  prec.rs  stmts.rs  tests.rs
crates/cyrusc_resolver/: Cargo.toml
crates/cyrusc_resolver/src/: cli.rs  debugger_cli.rs  diagnostics.rs  fs_module_loader.rs  lib.rs  macros.rs  modulefsloader.rs  modules.rs  query.rs  sigs.rs  symbols.rs  traverse.rs  utility.rs
crates/cyrusc_sema/: Cargo.toml
crates/cyrusc_sema/src/: analyze.rs  cli.rs  config.rs  const_fold.rs  context.rs  deduce.rs  diagnostics.rs  entrypoints.rs  flowstate.rs  format.rs  formatter.rs  generics.rs  inference_ctx.rs  lib.rs  lower.rs  lowerings.rs  monomorph.rs  nameconv.rs  naming.rs  normalizer.rs  type_cache.rs  used_marker.rs
crates/cyrusc_tast/: Cargo.toml
crates/cyrusc_tast/src/: exprs.rs  format.rs  lib.rs  sigs.rs  stmts.rs  tests.rs  types.rs  vtable.rs
crates/cyrusc_typed_ast/: Cargo.toml
crates/cyrusc_typed_ast/src/: builtins.rs  exprs.rs  format.rs  lib.rs  sigs.rs  stmts.rs  substitute.rs  tests.rs  types.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: cli.rs  diag.rs  diagnostics.rs  format.rs  lexer_test.rs  lib.rs  tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: cli.rs  common.rs  diag.rs  diagnostics.rs  exprs.rs  lib.rs  prec.rs  stmts.rs  tests.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: cli.rs  declsign.rs  diagnostics.rs  lib.rs  modulefsloader.rs  moduleloader.rs  scope.rs  signatures.rs  sigs.rs  symbols.rs  tests.rs  utility.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: cli.rs  const_fold.rs  context.rs  formatter.rs  generics.rs  lib.rs  lowerings.rs  monomorph.rs  normalizer.rs  type_cache.rs  used_marker.rs
parser/: Cargo.toml
parser/src/: cli.rs  common.rs  debug_tools.rs  expressions.rs  exprs.rs  lib.rs  parser_cli.rs  parser_test.rs  prec.rs  precedences.rs  statements.rs  stmts.rs  tests.rs
(+851 files in other folders)
