[workspace]
members = [
    "crates/cyrusc_lexer",
    "crates/cyrusc_parser",
    "crates/cyrusc_ast",
    "crates/cyrusc_scaffold",
    "crates/cyrusc_diagcentral",
    "crates/cyrusc_tast",
    "crates/cyrusc_cli",
    "crates/cyrusc_sema",
    "crates/cyrusc_resolver",
    "crates/cyrusc_cir",
    "crates/cyrusc_fs_utils",
    "crates/cyrusc_strescape",
    "crates/cyrusc_tui_utils",
    "crates/cyrusc_compiler",
    "crates/cyrusc_buildmanifest",
    "crates/cyrusc_scaffold_parser",
    "crates/cyrusc_modulefsloader",
    "crates/cyrusc_abi",
    "crates/cyrusc_asan_wrapper",
    "crates/cyrusc_tokens", "crates/cyrusc_vtable_registry", "crates/cyrusc_abi_targets",
]

default-members = ["crates/cyrusc_cli"]

resolver = "3"

[profile.release]
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
