[package]
name = "codegen_gccjit"
version = "0.1.0"
edition = "2024"

[dependencies]
gccjit_sys = { version = "0.6.0", features = ["master"] }
ast = { path = "../ast", version = "*" }
utils = { path = "../utils", version = "*" }
parser = { path = "../parser", version = "*" }
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.9"

[build-dependencies]
cc = "1.2.7"
