[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
gccjit_sys = "0.5.0"
ast = { path = "../ast", version = "*" }
utils = { path = "../utils", version = "*" }
parser = { path = "../parser", version = "*" }
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8"

[build-dependencies]
cc = "1.2.7"

