[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
codegen_llvm = { path = "../codegen_llvm", version = "*" }
parser = { path = "../parser", version = "*" }
clap = { version = "4.5.34", features = ["derive"] }
lexer = { path = "../lexer", version = "*" }
utils = { path = "../utils", version = "*" }
ast = { path = "../ast", version = "*" }
colorized = "1.0.0"
toml = "0.8.20"
