[package]
name = "cli"
version = "0.0.3"
edition = "2024"

[dependencies]
codegen = { path = "../codegen", version = "*" }
static_analyzer = { path = "../static_analyzer", version = "*" }
project_layout = { path = "../project_layout", version = "*" }
parser = { path = "../parser", version = "*" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
diagcentral = { path = "../diagcentral", version = "*" }
clap = { version = "4.5.41", features = ["derive"] }
lexer = { path = "../lexer", version = "*" }
utils = { path = "../utils", version = "*" }
ast = { path = "../ast", version = "*" }
typed_ast = { path = "../typed_ast", version = "*" }
resolver = { path = "../resolver", version = "*" }
colorized = "1.0.0"
toml = "0.8.20"

[[bin]]
name = "cyrus"
path = "./src/main.rs"
