[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils", version = "*" }
typed_ast = { path = "../typed_ast", version = "*" }
resolver = { path = "../resolver", version = "*" }
ast = { path = "../ast", version = "*" }
diagcentral = { path = "../diagcentral", version = "*" }
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
