[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
project_layout = { path = "../project_layout", version = "*" }
static_analyzer = { path = "../static_analyzer", version = "*" }
utils = { path = "../utils", version = "*" }
typed_ast = { path = "../typed_ast", version = "*" }
resolver = { path = "../resolver", version = "*" }
ast = { path = "../ast", version = "*" }
diagcentral = { path = "../diagcentral", version = "*" }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
blake3 = "1.8.2"