[package]
name = "codegen_llvm"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
clap = { version = "4.5.23", features = ["derive"] }
ast = { path = "../ast", version = "*" }
utils = { path = "../utils", version = "*" }
parser = { path = "../parser", version = "*" }
colorized = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"