[package]
name = "cyrusc_abi_targets"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.7.0", features = ["llvm18-1"] }
cyrusc_tast = { path = "../cyrusc_tast", version = "*" }
cyrusc_cir = { path = "../cyrusc_cir", version = "*" }
cyrusc_abi = { path = "../cyrusc_abi", version = "*" }
