[package]
name = "cyrusc_analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_internal = { path = "../cyrusc_internal", version = "*" }
cyrusc_source_loc = { path = "../cyrusc_source_loc", version = "*" }
cyrusc_tokens = { path = "../cyrusc_tokens", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
cyrusc_typed_ast = { path = "../cyrusc_typed_ast", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_parser = { path = "../cyrusc_parser", version = "*" }
cyrusc_lexer = { path = "../cyrusc_lexer", version = "*" }
cyrusc_resolver = { path = "../cyrusc_resolver", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_strescape = { path = "../cyrusc_strescape", version = "*" }
cyrusc_const_eval = { path = "../cyrusc_const_eval", version = "*" }
thiserror = "2.0.17"
thiserror-impl = "2.0.17"
fx-hash = "0.1.0"
smallvec = "1.15.1"

[lib]
name = "cyrusc_analyzer"
path = "./src/lib.rs"

[[bin]]
name = "cyrusc_analyzer"
path = "./src/cli.rs"
