[package]
name = "buildmanifest"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4"] }
scaffold = { path = "../cyrusc_scaffold", version = "*" }
diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
blake3 = "1.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
