[package]
name = "cyrusc_buildmanifest"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_scaffold_parser = { path = "../cyrusc_scaffold_parser", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
blake3 = "1.8.2"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
