[package]
name = "cir"
version = "0.1.0"
edition = "2024"

[dependencies]
fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
sema = { path = "../cyrusc_sema", version = "*" }
tast = { path = "../cyrusc_tast", version = "*" }
ast = { path = "../cyrusc_ast", version = "*" }
parser = { path = "../cyrusc_parser", version = "*" }
lexer = { path = "../cyrusc_lexer", version = "*" }
resolver = { path = "../cyrusc_resolver", version = "*" }
diagcentral = { path = "../cyrusc_diagcentral", version = "*" }

[lib]
name = "cir"
path = "./src/lib.rs"

[[bin]]
name = "cir"
path = "./src/cli.rs"
