[package]
name = "cyrusc_cir"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
cyrusc_sema = { path = "../cyrusc_sema", version = "*" }
cyrusc_tast = { path = "../cyrusc_tast", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_abi = { path = "../cyrusc_abi", version = "*" }
cyrusc_parser = { path = "../cyrusc_parser", version = "*" }
cyrusc_lexer = { path = "../cyrusc_lexer", version = "*" }
cyrusc_resolver = { path = "../cyrusc_resolver", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_modulefsloader = { path = "../cyrusc_modulefsloader", version = "*" }
rayon = "1.11.0"
num_cpus = "1.17.0"

[lib]
name = "cyrusc_cir"
path = "./src/lib.rs"

[[bin]]
name = "cyrusc_cir"
path = "./src/cli.rs"
