[package]
name = "cyrusc_cir_dump"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_strescape = { path = "../cyrusc_strescape", version = "*" }
cyrusc_source_loc = { path = "../cyrusc_source_loc", version = "*" }
cyrusc_typed_ast = { path = "../cyrusc_typed_ast", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_tokens = { path = "../cyrusc_tokens", version = "*" }
cyrusc_internal = { path = "../cyrusc_internal", version = "*" }