[package]
name = "cyrusc_codegen_llvm"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.7.0", features = ["llvm18-1"] }
cyrusc_tast = { path = "../cyrusc_tast", version = "*" }
cyrusc_buildmanifest = { path = "../cyrusc_buildmanifest", version = "*" }
cyrusc_vtable_registry = { path = "../cyrusc_vtable_registry", version = "*" }
cyrusc_cir = { path = "../cyrusc_cir", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_compiler = { path = "../cyrusc_compiler", version = "*" }
cyrusc_abi = { path = "../cyrusc_abi", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_scaffold_parser = { path = "../cyrusc_scaffold_parser", version = "*" }
cyrusc_sema = { path = "../cyrusc_sema", version = "*" }
cyrusc_asan_wrapper = { path = "../cyrusc_asan_wrapper", version = "*" }
cyrusc_tui_utils = { path = "../cyrusc_tui_utils", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
rayon = "1.11.0"
