[package]
name = "cyrusc_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_buildmanifest = { path = "../cyrusc_buildmanifest", version = "*" }
cyrusc_scaffold_parser = { path = "../cyrusc_scaffold_parser", version = "*" }
cyrusc_lexer = { path = "../cyrusc_lexer", version = "*" }
cyrusc_parser = { path = "../cyrusc_parser", version = "*" }
cyrusc_resolver = { path = "../cyrusc_resolver", version = "*" }
cyrusc_sema = { path = "../cyrusc_sema", version = "*" }
cyrusc_cir = { path = "../cyrusc_cir", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
cyrusc_tui_utils = { path = "../cyrusc_tui_utils", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
serde = { version = "1.0.219", features = ["derive"] }
rayon = "1.11.0"
num_cpus = "1.17.0"
