[package]
name = "cyrusc_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_vtable_registry = { path = "../cyrusc_vtable_registry", version = "*" }
cyrusc_buildmanifest = { path = "../cyrusc_buildmanifest", version = "*" }
cyrusc_scaffold_parser = { path = "../cyrusc_scaffold_parser", version = "*" }
cyrusc_lexer = { path = "../cyrusc_lexer", version = "*" }
cyrusc_parser = { path = "../cyrusc_parser", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_resolver = { path = "../cyrusc_resolver", version = "*" }
cyrusc_sema = { path = "../cyrusc_sema", version = "*" }
cyrusc_tast = { path = "../cyrusc_tast", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
cyrusc_tui_utils = { path = "../cyrusc_tui_utils", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_internal = { path = "../cyrusc_internal", version = "*" }
inkwell = { version = "0.7.0", features = ["llvm18-1"] }
serde = { version = "1.0.219", features = ["derive"] }
which = "8.0.0"
