[package]
name = "cyrusc_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_source_loc = { path = "../cyrusc_source_loc", version = "*" }
cyrusc_buildmanifest = { path = "../cyrusc_buildmanifest", version = "*" }
cyrusc_scaffold_parser = { path = "../cyrusc_scaffold_parser", version = "*" }
cyrusc_parser = { path = "../cyrusc_parser", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_resolver = { path = "../cyrusc_resolver", version = "*" }
cyrusc_analyzer = { path = "../cyrusc_analyzer", version = "*" }
cyrusc_typed_ast = { path = "../cyrusc_typed_ast", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
cyrusc_tui_utils = { path = "../cyrusc_tui_utils", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_internal = { path = "../cyrusc_internal", version = "*" }
inkwell = { version = "0.7.0", features = ["llvm18-1"] }
serde = { version = "1.0.219", features = ["derive"] }
which = "8.0.0"
