[package]
name = "cyrusc_internal"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_source_loc = { path = "../cyrusc_source_loc", version = "*" }
cyrusc_typed_ast = { path = "../cyrusc_typed_ast", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_tokens = { path = "../cyrusc_tokens", version = "*" }
once_cell = "1.21.3"
fx-hash = "0.1.0"

[lib]
name = "cyrusc_internal"
path = "./src/lib.rs"
