[package]
name = "lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { path = "../cyrusc_ast", version = "*" }
utils = { path = "../cyrusc_utils", version = "*" }
diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
unicode-segmentation = "1.9.0"

[lib]
name = "lexer"
path = "./src/lib.rs"

[[bin]]
name = "lexer"
path = "./src/cli.rs"
