[package]
name = "cyrusc_lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_source_loc = { path = "../cyrusc_source_loc", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_tokens = { path = "../cyrusc_tokens", version = "*" }
cyrusc_strescape = { path = "../cyrusc_strescape", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
thiserror = "2.0.17"
thiserror-impl = "2.0.17"

[lib]
name = "cyrusc_lexer"
path = "./src/lib.rs"

[[bin]]
name = "cyrusc_lexer"
path = "./src/cli.rs"
