[package]
name = "cyrusc_modulefsloader"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
cyrusc_lexer = { path = "../cyrusc_lexer", version = "*" }
cyrusc_parser = { path = "../cyrusc_parser", version = "*" }
thiserror = "2.0.17"
thiserror-impl = "2.0.17"