[package]
name = "cyrusc_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_lexer = { path = "../cyrusc_lexer", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
thiserror = "2.0.17"
thiserror-impl = "2.0.17"

[lib]
name = "cyrusc_parser"
path = "./src/lib.rs"

[[bin]]
name = "cyrusc_parser"
path = "./src/cli.rs"
