[package]
name = "resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
tast = { path = "../cyrusc_tast", version = "*" }
parser = { path = "../cyrusc_parser", version = "*" }
lexer = { path = "../cyrusc_lexer", version = "*" }
utils = { path = "../cyrusc_utils", version = "*" }
ast = { path = "../cyrusc_ast", version = "*" }
rand = "0.9.0"

[lib]
name = "resolver"
path = "./src/lib.rs"

[[bin]]
name = "resolver"
path = "./src/cli.rs"
