[package]
name = "cyrusc_resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_source_loc = { path = "../cyrusc_source_loc", version = "*" }
cyrusc_internal = { path = "../cyrusc_internal", version = "*" }
cyrusc_tokens = { path = "../cyrusc_tokens", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
cyrusc_tast = { path = "../cyrusc_tast", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
thiserror = "2.0.17"
thiserror-impl = "2.0.17"
rand = "0.9.0"

[lib]
name = "cyrusc_resolver"
path = "./src/lib.rs"

[[bin]]
name = "cyrusc_resolver"
path = "./src/cli.rs"
