[package]
name = "cyrusc_sema"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_vtable_registry = { path = "../cyrusc_vtable_registry", version = "*" }
cyrusc_tokens = { path = "../cyrusc_tokens", version = "*" }
cyrusc_fs_utils = { path = "../cyrusc_fs_utils", version = "*" }
cyrusc_tast = { path = "../cyrusc_tast", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_parser = { path = "../cyrusc_parser", version = "*" }
cyrusc_lexer = { path = "../cyrusc_lexer", version = "*" }
cyrusc_resolver = { path = "../cyrusc_resolver", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
cyrusc_modulefsloader = { path = "../cyrusc_modulefsloader", version = "*" }
cyrusc_strescape = { path = "../cyrusc_strescape", version = "*" }
cyrusc_const_eval = { path = "../cyrusc_const_eval", version = "*" }
thiserror = "2.0.17"
thiserror-impl = "2.0.17"
fx-hash = "0.1.0"
smallvec = "1.15.1"

[lib]
name = "cyrusc_sema"
path = "./src/lib.rs"

[[bin]]
name = "cyrusc_sema"
path = "./src/cli.rs"
