[package]
name = "cyrusc_tast"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_tokens = { path = "../cyrusc_tokens", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_abi = { path = "../cyrusc_abi", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
thiserror = "2.0.17"
thiserror-impl = "2.0.17"
rand = "0.9.0"
