[package]
name = "cyrusc_typed_ast"
version = "0.1.0"
edition = "2024"

[dependencies]
cyrusc_source_loc = { path = "../cyrusc_source_loc", version = "*" }
cyrusc_tokens = { path = "../cyrusc_tokens", version = "*" }
cyrusc_ast = { path = "../cyrusc_ast", version = "*" }
cyrusc_diagcentral = { path = "../cyrusc_diagcentral", version = "*" }
thiserror = "2.0.17"
thiserror-impl = "2.0.17"
fx-hash = "0.1.0"

