[package]
name = "lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
ast = { path = "../ast", version = "*" }
utils = { path = "../utils", version = "*" }
diag = { path = "../diag", version = "*" }
unicode-segmentation = "1.9.0"
hex = "*"
base64 = "*"


[lib]
name = "lexer"
path = "./src/lib.rs"

[[bin]]
name = "lexer"
path = "./src/cli.rs"
