[package]
name = "semantic"
version = "0.1.0"
edition = "2024"

[dependencies]
typed_ast = { path = "../typed_ast", version = "*" }
ast = { path = "../ast", version = "*" }
parser = { path = "../parser", version = "*" }
lexer = { path = "../lexer", version = "*" }
utils = { path = "../utils", version = "*" }
resolver = { path = "../resolver", version = "*" }
diagcentral = { path = "../diagcentral", version = "*" }
fx-hash = "0.1.0"
smallvec = "1.15.1"

[lib]
name = "semantic"
path = "./src/lib.rs"

[[bin]]
name = "semantic"
path = "./src/cli.rs"
